Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.

Version 2.5
  FEATURES:
    * Now It's possible to use formated strings for prefix and suffix in 
      Playlist's layout items.

  BUGFIXES:
    * Correctly parse disambiguation pages for songs in the English Wikipedia. (BR 270054)
    * Fix wrong context view applets sizes on start up in some cases.
    * Fix Amarok consuming CPU until main window is shown. (BR 278897)
    * Fix last.fm 'scrobble composer' option's fallback to artist (BR 286215)
    * Fix volume control from within Amarok.
    * Fix slow startup because of imported playlists. (BR 284761)
    * Fix audio CD detection on Amarok start. (BR 276032)
    * Set a default filename scheme for USB Mass Storage (BR 285900)
    * Fixed crash during MusicBrainz search. (BR 277475)

  CHANGES:
    * Allow editing the SearchWidget during a search animation.
    * Update the collection view while UMS is scanning.
    * Don't block the UI while scanning UMS device.
    * Allow going back and forward in Amazon store. Thanks to GCI student Nikola Miljkovic.

Version 2.5.0-Beta 1
  FEATURES:
    * New "equals" match in collection filter - e.g. label:=pop finds songs
      with label "pop" but not songs with label "electro pop". (BR 260004)
    * Enable dropping tracks on empty area in Saved Playlists to create new
      playlist.
    * Added a "create new playlist" action in the empty space of the Saved
      Playlists. (BR202725)
    * Add new type of optional tokens in format string (Collection Organizer)
      (BR 264874)
    * Compilations are properly marked as such when transferring music
      to/from iPods. (BR 207880)
    * Ctrl+F now activates collection browser and focuses the seach collection
      bar. (BR 257381)
    * Music store based on the Amazon catalogue.
    * Podcast subscription synchronisation and podcast status synchronisation
      with gpodder.net service.